yac.output
Terminals unused in grammar

   bit_and
   bit_or
   bit_not


State 126 conflicts: 2 shift/reduce
State 127 conflicts: 15 shift/reduce
State 165 conflicts: 2 shift/reduce
State 166 conflicts: 2 shift/reduce
State 167 conflicts: 15 shift/reduce
State 168 conflicts: 15 shift/reduce
State 169 conflicts: 2 shift/reduce
State 170 conflicts: 2 shift/reduce
State 171 conflicts: 2 shift/reduce
State 172 conflicts: 2 shift/reduce
State 173 conflicts: 2 shift/reduce
State 174 conflicts: 2 shift/reduce
State 175 conflicts: 2 shift/reduce
State 176 conflicts: 2 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program_token id_token ';' def_types consts vars functions procedures blok '.'

    2 def_types: type_token type_list ';'
    3          | %empty

    4 type_list: type_list ';' arg_list '=' types
    5          | arg_list '=' types

    6 consts: const_token const_list ';'
    7       | %empty

    8 const_list: const_list ';' id_token '=' constE
    9           | id_token '=' constE

   10 constE: num_token
   11       | string_token
   12       | bool_token

   13 vars: var_token var_list ';'
   14     | %empty

   15 functions: functions function_token id_token '(' args ')' ':' types ';' vars blok ';'
   16          | functions function_token id_token '(' args ')' ':' types ';' forward_token ';'
   17          | %empty

   18 procedures: procedures procedure_token id_token '(' args ')' ';' vars blok ';'
   19           | procedures procedure_token id_token '(' args ')' ';' forward_token ';'
   20           | %empty

   21 types: int_token
   22      | float_token
   23      | char_token
   24      | id_token
   25      | array_token '[' num_token '.' '.' num_token ']' of_token types
   26      | '^' types
   27      | bool_type
   28      | record_token records ';' end_token

   29 records: records ';' id_token ':' types
   30        | id_token ':' types

   31 args: var_list
   32     | %empty

   33 var_list: var_list ';' arg_list ':' types
   34         | arg_list ':' types

   35 arg_list: arg_list ',' id_token
   36         | id_token

   37 blok: begin_token lines end_token

   38 lines: lines line ';'
   39      | line ';'

   40 line: print_token '(' E ')'
   41     | read_token '(' E ')'
   42     | ids '=' EP
   43     | if_token '(' E ')' then_token blok
   44     | if_token '(' E ')' then_token blok else_token blok
   45     | break_token
   46     | continue_token
   47     | while_token E do_token blok
   48     | repeat_token lines until_token E
   49     | for_token id_token '=' E to_token E do_token blok
   50     | id_token '(' nizE ')'
   51     | id_token '(' ')'
   52     | exit_token

   53 ids: ids '[' E ']'
   54    | ids '^'
   55    | '(' ids ')'
   56    | ids '.' id_token
   57    | id_token

   58 EP: '@' E
   59   | E

   60 E: E '+' E
   61  | E '-' E
   62  | E '*' E
   63  | E '/' E
   64  | E bita_token E
   65  | E bito_token E
   66  | bitn_token E
   67  | E GT E
   68  | E LT E
   69  | E EQ E
   70  | E NE E
   71  | E and_token E
   72  | E or_token E
   73  | not_token E
   74  | '(' E ')'
   75  | E '^'
   76  | E '[' E ']'
   77  | E '.' id_token
   78  | id_token
   79  | num_token
   80  | string_token
   81  | id_token '(' ')'
   82  | id_token '(' nizE ')'
   83  | bool_token

   84 nizE: nizE ',' EP
   85     | EP


Terminals, with rules where they appear

$end (0) 0
'(' (40) 15 16 18 19 40 41 43 44 50 51 55 74 81 82
')' (41) 15 16 18 19 40 41 43 44 50 51 55 74 81 82
'*' (42) 62
'+' (43) 60
',' (44) 35 84
'-' (45) 61
'.' (46) 1 25 56 77
'/' (47) 63
':' (58) 15 16 29 30 33 34
';' (59) 1 2 4 6 8 13 15 16 18 19 28 29 33 38 39
'=' (61) 4 5 8 9 42 49
'@' (64) 58
'[' (91) 25 53 76
']' (93) 25 53 76
'^' (94) 26 54 75
error (256)
bool_token (258) 12 83
num_token (259) 10 25 79
string_token (260) 11 80
id_token (261) 1 8 9 15 16 18 19 24 29 30 35 36 49 50 51 56 57 77 78
    81 82
begin_token (262) 37
end_token (263) 28 37
program_token (264) 1
print_token (265) 40
read_token (266) 41
if_token (267) 43 44
then_token (268) 43 44
else_token (269) 44
function_token (270) 15 16
procedure_token (271) 18 19
while_token (272) 47
do_token (273) 47 49
for_token (274) 49
to_token (275) 49
type_token (276) 2
forward_token (277) 16 19
continue_token (278) 46
break_token (279) 45
exit_token (280) 52
repeat_token (281) 48
until_token (282) 48
int_token (283) 21
float_token (284) 22
char_token (285) 23
array_token (286) 25
of_token (287) 25
const_token (288) 6
var_token (289) 13
bool_type (290) 27
record_token (291) 28
and_token (292) 71
or_token (293) 72
not_token (294) 73
bita_token (295) 64
bito_token (296) 65
bitn_token (297) 66
LT (298) 68
GT (299) 67
EQ (300) 69
NE (301) 70
bit_and (302)
bit_or (303)
bit_not (304)


Nonterminals, with rules where they appear

$accept (65)
    on left: 0
start (66)
    on left: 1, on right: 0
def_types (67)
    on left: 2 3, on right: 1
type_list (68)
    on left: 4 5, on right: 2 4
consts (69)
    on left: 6 7, on right: 1
const_list (70)
    on left: 8 9, on right: 6 8
constE (71)
    on left: 10 11 12, on right: 8 9
vars (72)
    on left: 13 14, on right: 1 15 18
functions (73)
    on left: 15 16 17, on right: 1 15 16
procedures (74)
    on left: 18 19 20, on right: 1 18 19
types (75)
    on left: 21 22 23 24 25 26 27 28, on right: 4 5 15 16 25 26 29
    30 33 34
records (76)
    on left: 29 30, on right: 28 29
args (77)
    on left: 31 32, on right: 15 16 18 19
var_list (78)
    on left: 33 34, on right: 13 31 33
arg_list (79)
    on left: 35 36, on right: 4 5 33 34 35
blok (80)
    on left: 37, on right: 1 15 18 43 44 47 49
lines (81)
    on left: 38 39, on right: 37 38 48
line (82)
    on left: 40 41 42 43 44 45 46 47 48 49 50 51 52, on right: 38 39
ids (83)
    on left: 53 54 55 56 57, on right: 42 53 54 55 56
EP (84)
    on left: 58 59, on right: 42 84 85
E (85)
    on left: 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
    78 79 80 81 82 83, on right: 40 41 43 44 47 48 49 53 58 59 60 61
    62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77
nizE (86)
    on left: 84 85, on right: 50 82 84


State 0

    0 $accept: . start $end

    program_token  shift, and go to state 1

    start  go to state 2


State 1

    1 start: program_token . id_token ';' def_types consts vars functions procedures blok '.'

    id_token  shift, and go to state 3


State 2

    0 $accept: start . $end

    $end  shift, and go to state 4


State 3

    1 start: program_token id_token . ';' def_types consts vars functions procedures blok '.'

    ';'  shift, and go to state 5


State 4

    0 $accept: start $end .

    $default  accept


State 5

    1 start: program_token id_token ';' . def_types consts vars functions procedures blok '.'

    type_token  shift, and go to state 6

    $default  reduce using rule 3 (def_types)

    def_types  go to state 7


State 6

    2 def_types: type_token . type_list ';'

    id_token  shift, and go to state 8

    type_list  go to state 9
    arg_list   go to state 10


State 7

    1 start: program_token id_token ';' def_types . consts vars functions procedures blok '.'

    const_token  shift, and go to state 11

    $default  reduce using rule 7 (consts)

    consts  go to state 12


State 8

   36 arg_list: id_token .

    $default  reduce using rule 36 (arg_list)


State 9

    2 def_types: type_token type_list . ';'
    4 type_list: type_list . ';' arg_list '=' types

    ';'  shift, and go to state 13


State 10

    5 type_list: arg_list . '=' types
   35 arg_list: arg_list . ',' id_token

    '='  shift, and go to state 14
    ','  shift, and go to state 15


State 11

    6 consts: const_token . const_list ';'

    id_token  shift, and go to state 16

    const_list  go to state 17


State 12

    1 start: program_token id_token ';' def_types consts . vars functions procedures blok '.'

    var_token  shift, and go to state 18

    $default  reduce using rule 14 (vars)

    vars  go to state 19


State 13

    2 def_types: type_token type_list ';' .
    4 type_list: type_list ';' . arg_list '=' types

    id_token  shift, and go to state 8

    $default  reduce using rule 2 (def_types)

    arg_list  go to state 20


State 14

    5 type_list: arg_list '=' . types

    id_token      shift, and go to state 21
    int_token     shift, and go to state 22
    float_token   shift, and go to state 23
    char_token    shift, and go to state 24
    array_token   shift, and go to state 25
    bool_type     shift, and go to state 26
    record_token  shift, and go to state 27
    '^'           shift, and go to state 28

    types  go to state 29


State 15

   35 arg_list: arg_list ',' . id_token

    id_token  shift, and go to state 30


State 16

    9 const_list: id_token . '=' constE

    '='  shift, and go to state 31


State 17

    6 consts: const_token const_list . ';'
    8 const_list: const_list . ';' id_token '=' constE

    ';'  shift, and go to state 32


State 18

   13 vars: var_token . var_list ';'

    id_token  shift, and go to state 8

    var_list  go to state 33
    arg_list  go to state 34


State 19

    1 start: program_token id_token ';' def_types consts vars . functions procedures blok '.'

    $default  reduce using rule 17 (functions)

    functions  go to state 35


State 20

    4 type_list: type_list ';' arg_list . '=' types
   35 arg_list: arg_list . ',' id_token

    '='  shift, and go to state 36
    ','  shift, and go to state 15


State 21

   24 types: id_token .

    $default  reduce using rule 24 (types)


State 22

   21 types: int_token .

    $default  reduce using rule 21 (types)


State 23

   22 types: float_token .

    $default  reduce using rule 22 (types)


State 24

   23 types: char_token .

    $default  reduce using rule 23 (types)


State 25

   25 types: array_token . '[' num_token '.' '.' num_token ']' of_token types

    '['  shift, and go to state 37


State 26

   27 types: bool_type .

    $default  reduce using rule 27 (types)


State 27

   28 types: record_token . records ';' end_token

    id_token  shift, and go to state 38

    records  go to state 39


State 28

   26 types: '^' . types

    id_token      shift, and go to state 21
    int_token     shift, and go to state 22
    float_token   shift, and go to state 23
    char_token    shift, and go to state 24
    array_token   shift, and go to state 25
    bool_type     shift, and go to state 26
    record_token  shift, and go to state 27
    '^'           shift, and go to state 28

    types  go to state 40


State 29

    5 type_list: arg_list '=' types .

    $default  reduce using rule 5 (type_list)


State 30

   35 arg_list: arg_list ',' id_token .

    $default  reduce using rule 35 (arg_list)


State 31

    9 const_list: id_token '=' . constE

    bool_token    shift, and go to state 41
    num_token     shift, and go to state 42
    string_token  shift, and go to state 43

    constE  go to state 44


State 32

    6 consts: const_token const_list ';' .
    8 const_list: const_list ';' . id_token '=' constE

    id_token  shift, and go to state 45

    $default  reduce using rule 6 (consts)


State 33

   13 vars: var_token var_list . ';'
   33 var_list: var_list . ';' arg_list ':' types

    ';'  shift, and go to state 46


State 34

   34 var_list: arg_list . ':' types
   35 arg_list: arg_list . ',' id_token

    ':'  shift, and go to state 47
    ','  shift, and go to state 15


State 35

    1 start: program_token id_token ';' def_types consts vars functions . procedures blok '.'
   15 functions: functions . function_token id_token '(' args ')' ':' types ';' vars blok ';'
   16          | functions . function_token id_token '(' args ')' ':' types ';' forward_token ';'

    function_token  shift, and go to state 48

    $default  reduce using rule 20 (procedures)

    procedures  go to state 49


State 36

    4 type_list: type_list ';' arg_list '=' . types

    id_token      shift, and go to state 21
    int_token     shift, and go to state 22
    float_token   shift, and go to state 23
    char_token    shift, and go to state 24
    array_token   shift, and go to state 25
    bool_type     shift, and go to state 26
    record_token  shift, and go to state 27
    '^'           shift, and go to state 28

    types  go to state 50


State 37

   25 types: array_token '[' . num_token '.' '.' num_token ']' of_token types

    num_token  shift, and go to state 51


State 38

   30 records: id_token . ':' types

    ':'  shift, and go to state 52


State 39

   28 types: record_token records . ';' end_token
   29 records: records . ';' id_token ':' types

    ';'  shift, and go to state 53


State 40

   26 types: '^' types .

    $default  reduce using rule 26 (types)


State 41

   12 constE: bool_token .

    $default  reduce using rule 12 (constE)


State 42

   10 constE: num_token .

    $default  reduce using rule 10 (constE)


State 43

   11 constE: string_token .

    $default  reduce using rule 11 (constE)


State 44

    9 const_list: id_token '=' constE .

    $default  reduce using rule 9 (const_list)


State 45

    8 const_list: const_list ';' id_token . '=' constE

    '='  shift, and go to state 54


State 46

   13 vars: var_token var_list ';' .
   33 var_list: var_list ';' . arg_list ':' types

    id_token  shift, and go to state 8

    $default  reduce using rule 13 (vars)

    arg_list  go to state 55


State 47

   34 var_list: arg_list ':' . types

    id_token      shift, and go to state 21
    int_token     shift, and go to state 22
    float_token   shift, and go to state 23
    char_token    shift, and go to state 24
    array_token   shift, and go to state 25
    bool_type     shift, and go to state 26
    record_token  shift, and go to state 27
    '^'           shift, and go to state 28

    types  go to state 56


State 48

   15 functions: functions function_token . id_token '(' args ')' ':' types ';' vars blok ';'
   16          | functions function_token . id_token '(' args ')' ':' types ';' forward_token ';'

    id_token  shift, and go to state 57


State 49

    1 start: program_token id_token ';' def_types consts vars functions procedures . blok '.'
   18 procedures: procedures . procedure_token id_token '(' args ')' ';' vars blok ';'
   19           | procedures . procedure_token id_token '(' args ')' ';' forward_token ';'

    begin_token      shift, and go to state 58
    procedure_token  shift, and go to state 59

    blok  go to state 60


State 50

    4 type_list: type_list ';' arg_list '=' types .

    $default  reduce using rule 4 (type_list)


State 51

   25 types: array_token '[' num_token . '.' '.' num_token ']' of_token types

    '.'  shift, and go to state 61


State 52

   30 records: id_token ':' . types

    id_token      shift, and go to state 21
    int_token     shift, and go to state 22
    float_token   shift, and go to state 23
    char_token    shift, and go to state 24
    array_token   shift, and go to state 25
    bool_type     shift, and go to state 26
    record_token  shift, and go to state 27
    '^'           shift, and go to state 28

    types  go to state 62


State 53

   28 types: record_token records ';' . end_token
   29 records: records ';' . id_token ':' types

    id_token   shift, and go to state 63
    end_token  shift, and go to state 64


State 54

    8 const_list: const_list ';' id_token '=' . constE

    bool_token    shift, and go to state 41
    num_token     shift, and go to state 42
    string_token  shift, and go to state 43

    constE  go to state 65


State 55

   33 var_list: var_list ';' arg_list . ':' types
   35 arg_list: arg_list . ',' id_token

    ':'  shift, and go to state 66
    ','  shift, and go to state 15


State 56

   34 var_list: arg_list ':' types .

    $default  reduce using rule 34 (var_list)


State 57

   15 functions: functions function_token id_token . '(' args ')' ':' types ';' vars blok ';'
   16          | functions function_token id_token . '(' args ')' ':' types ';' forward_token ';'

    '('  shift, and go to state 67


State 58

   37 blok: begin_token . lines end_token

    id_token        shift, and go to state 68
    print_token     shift, and go to state 69
    read_token      shift, and go to state 70
    if_token        shift, and go to state 71
    while_token     shift, and go to state 72
    for_token       shift, and go to state 73
    continue_token  shift, and go to state 74
    break_token     shift, and go to state 75
    exit_token      shift, and go to state 76
    repeat_token    shift, and go to state 77
    '('             shift, and go to state 78

    lines  go to state 79
    line   go to state 80
    ids    go to state 81


State 59

   18 procedures: procedures procedure_token . id_token '(' args ')' ';' vars blok ';'
   19           | procedures procedure_token . id_token '(' args ')' ';' forward_token ';'

    id_token  shift, and go to state 82


State 60

    1 start: program_token id_token ';' def_types consts vars functions procedures blok . '.'

    '.'  shift, and go to state 83


State 61

   25 types: array_token '[' num_token '.' . '.' num_token ']' of_token types

    '.'  shift, and go to state 84


State 62

   30 records: id_token ':' types .

    $default  reduce using rule 30 (records)


State 63

   29 records: records ';' id_token . ':' types

    ':'  shift, and go to state 85


State 64

   28 types: record_token records ';' end_token .

    $default  reduce using rule 28 (types)


State 65

    8 const_list: const_list ';' id_token '=' constE .

    $default  reduce using rule 8 (const_list)


State 66

   33 var_list: var_list ';' arg_list ':' . types

    id_token      shift, and go to state 21
    int_token     shift, and go to state 22
    float_token   shift, and go to state 23
    char_token    shift, and go to state 24
    array_token   shift, and go to state 25
    bool_type     shift, and go to state 26
    record_token  shift, and go to state 27
    '^'           shift, and go to state 28

    types  go to state 86


State 67

   15 functions: functions function_token id_token '(' . args ')' ':' types ';' vars blok ';'
   16          | functions function_token id_token '(' . args ')' ':' types ';' forward_token ';'

    id_token  shift, and go to state 8

    $default  reduce using rule 32 (args)

    args      go to state 87
    var_list  go to state 88
    arg_list  go to state 34


State 68

   50 line: id_token . '(' nizE ')'
   51     | id_token . '(' ')'
   57 ids: id_token .

    '('  shift, and go to state 89

    $default  reduce using rule 57 (ids)


State 69

   40 line: print_token . '(' E ')'

    '('  shift, and go to state 90


State 70

   41 line: read_token . '(' E ')'

    '('  shift, and go to state 91


State 71

   43 line: if_token . '(' E ')' then_token blok
   44     | if_token . '(' E ')' then_token blok else_token blok

    '('  shift, and go to state 92


State 72

   47 line: while_token . E do_token blok

    bool_token    shift, and go to state 93
    num_token     shift, and go to state 94
    string_token  shift, and go to state 95
    id_token      shift, and go to state 96
    not_token     shift, and go to state 97
    bitn_token    shift, and go to state 98
    '('           shift, and go to state 99

    E  go to state 100


State 73

   49 line: for_token . id_token '=' E to_token E do_token blok

    id_token  shift, and go to state 101


State 74

   46 line: continue_token .

    $default  reduce using rule 46 (line)


State 75

   45 line: break_token .

    $default  reduce using rule 45 (line)


State 76

   52 line: exit_token .

    $default  reduce using rule 52 (line)


State 77

   48 line: repeat_token . lines until_token E

    id_token        shift, and go to state 68
    print_token     shift, and go to state 69
    read_token      shift, and go to state 70
    if_token        shift, and go to state 71
    while_token     shift, and go to state 72
    for_token       shift, and go to state 73
    continue_token  shift, and go to state 74
    break_token     shift, and go to state 75
    exit_token      shift, and go to state 76
    repeat_token    shift, and go to state 77
    '('             shift, and go to state 78

    lines  go to state 102
    line   go to state 80
    ids    go to state 81


State 78

   55 ids: '(' . ids ')'

    id_token  shift, and go to state 103
    '('       shift, and go to state 78

    ids  go to state 104


State 79

   37 blok: begin_token lines . end_token
   38 lines: lines . line ';'

    id_token        shift, and go to state 68
    end_token       shift, and go to state 105
    print_token     shift, and go to state 69
    read_token      shift, and go to state 70
    if_token        shift, and go to state 71
    while_token     shift, and go to state 72
    for_token       shift, and go to state 73
    continue_token  shift, and go to state 74
    break_token     shift, and go to state 75
    exit_token      shift, and go to state 76
    repeat_token    shift, and go to state 77
    '('             shift, and go to state 78

    line  go to state 106
    ids   go to state 81


State 80

   39 lines: line . ';'

    ';'  shift, and go to state 107


State 81

   42 line: ids . '=' EP
   53 ids: ids . '[' E ']'
   54    | ids . '^'
   56    | ids . '.' id_token

    '^'  shift, and go to state 108
    '['  shift, and go to state 109
    '.'  shift, and go to state 110
    '='  shift, and go to state 111


State 82

   18 procedures: procedures procedure_token id_token . '(' args ')' ';' vars blok ';'
   19           | procedures procedure_token id_token . '(' args ')' ';' forward_token ';'

    '('  shift, and go to state 112


State 83

    1 start: program_token id_token ';' def_types consts vars functions procedures blok '.' .

    $default  reduce using rule 1 (start)


State 84

   25 types: array_token '[' num_token '.' '.' . num_token ']' of_token types

    num_token  shift, and go to state 113


State 85

   29 records: records ';' id_token ':' . types
